# fillit

./: .README.swp  .gogogo.c.swp  .main.c.swp  CMakeLists.txt  Makefile  README  algo.c  algo3x.c  algofunc.c  author  extra.c  extra2.c  fil  fil.h  fil2.c  fillit  fillit.c  gogogo.c  lldb - faq  main.c  t.fillit  test.fillit  trash.c
fillit.dSYM/Contents/Resources/DWARF/: fillit
lib/: .Makefile.swp  ft_lstaddend.c  ft_memmove.c  get_next_line.c
lib/includes/: libft.h
test/: a.out  dbg.c  t.fillit  test.c
valid_maps/: 26_shapes
