cmake_minimum_required(VERSION 3.14)
project(fil)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(lib)
include_directories(lib/includes)
include_directories(valid_maps)

add_executable(fil
        lib/includes/libft.h
        lib/author
        lib/ft_atoi.c
        lib/ft_bzero.c
        lib/ft_isalnum.c
        lib/ft_isalpha.c
        lib/ft_isascii.c
        lib/ft_isdigit.c
        lib/ft_isprint.c
        lib/ft_itoa.c
        lib/ft_lstadd.c
        lib/ft_lstaddend.c
        lib/ft_lstdel.c
        lib/ft_lstdelone.c
        lib/ft_lstiter.c
        lib/ft_lstmap.c
        lib/ft_lstnew.c
        lib/ft_memalloc.c
        lib/ft_memccpy.c
        lib/ft_memchr.c
        lib/ft_memcmp.c
        lib/ft_memcpy.c
        lib/ft_memdel.c
        lib/ft_memdl.c
        lib/ft_memmove.c
        lib/ft_memset.c
        lib/ft_putchar.c
        lib/ft_putchar_fd.c
        lib/ft_putendl.c
        lib/ft_putendl_fd.c
        lib/ft_putnbr.c
        lib/ft_putnbr_fd.c
        lib/ft_putstr.c
        lib/ft_putstr_fd.c
        lib/ft_strcat.c
        lib/ft_strchr.c
        lib/ft_strclr.c
        lib/ft_strcmp.c
        lib/ft_strcpy.c
        lib/ft_strdel.c
        lib/ft_strdup.c
        lib/ft_strequ.c
        lib/ft_striter.c
        lib/ft_striteri.c
        lib/ft_strjoin.c
        lib/ft_strlcat.c
        lib/ft_strlen.c
        lib/ft_strmap.c
        lib/ft_strmapi.c
        lib/ft_strncat.c
        lib/ft_strncmp.c
        lib/ft_strncpy.c
        lib/ft_strnequ.c
        lib/ft_strnew.c
        lib/ft_strnstr.c
        lib/ft_strrchr.c
        lib/ft_strsplit.c
        lib/ft_strstr.c
        lib/ft_strsub.c
        lib/ft_strtrim.c
        lib/ft_tolower.c
        lib/ft_toupper.c
        lib/get_next_line.c
        lib/libft.a
        lib/Makefile
        valid_maps/10_random_shapes
        valid_maps/10_shapes
        valid_maps/26_shapes
        valid_maps/4_squares
        valid_maps/5_squares
        valid_maps/7_sticks
        valid_maps/8_l_tetri
        valid_maps/8_sticks
        valid_maps/9_l_tetri
        valid_maps/9_shapes
        valid_maps/allshapes
        valid_maps/basic_input
        valid_maps/easy_no_overlap
        valid_maps/manage_overlap
        valid_maps/pg10_example
        valid_maps/pg11_example
        valid_maps/stick_tetri
        valid_maps/two_l_tetriminoes
        valid_maps/two_square_tetri
        valid_maps/two_tetriminoes
        fil.h
        main.c
        Makefile
        README
        t.fillit extra.c)
